@@ -10,6 +10,7 @@
 package org.eclipse.hawkbit.repository.jpa.acm;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.eclipse.hawkbit.im.authentication.SpPermission.CREATE_ROLLOUT;
 import static org.eclipse.hawkbit.im.authentication.SpPermission.READ_REPOSITORY;
@@ -27,7 +28,9 @@ import org.eclipse.hawkbit.repository.FilterParams;
 import org.eclipse.hawkbit.repository.Identifiable;
 import org.eclipse.hawkbit.repository.TargetFilterQueryManagement;
 import org.eclipse.hawkbit.repository.TargetFilterQueryManagement.AutoAssignDistributionSetUpdate;
+import org.eclipse.hawkbit.repository.TargetManagement.Create;
 import org.eclipse.hawkbit.repository.TargetTagManagement;
+import org.eclipse.hawkbit.repository.exception.EntityNotFoundException;
 import org.eclipse.hawkbit.repository.exception.InsufficientPermissionException;
 import org.eclipse.hawkbit.repository.jpa.AbstractJpaIntegrationTest;
 import org.eclipse.hawkbit.repository.jpa.autoassign.AutoAssignChecker;
@@ -59,10 +62,10 @@ class TargetAccessControllerTest extends AbstractJpaIntegrationTest {
     @Test
     void verifyTargetReadOperations() {
         final Target permittedTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device01").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device01").updateStatus(TargetUpdateStatus.REGISTERED).build());
 
         final Target hiddenTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device02").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device02").updateStatus(TargetUpdateStatus.REGISTERED).build());
 
         runAs(withUser("user", READ_TARGET + "/controllerId==" + permittedTarget.getControllerId()), () -> {
             // verify targetManagement#findAll
@@ -78,15 +81,15 @@ class TargetAccessControllerTest extends AbstractJpaIntegrationTest {
                     .map(Identifiable::getId).toList()).containsOnly(permittedTarget.getId());
 
             // verify targetManagement#getByControllerID
-            assertThat(targetManagement.getByControllerID(permittedTarget.getControllerId())).isPresent();
+            assertThat(targetManagement.getByControllerId(permittedTarget.getControllerId())).isPresent();
             final String hiddenTargetControllerId = hiddenTarget.getControllerId();
-            assertThatThrownBy(() -> targetManagement.getByControllerID(hiddenTargetControllerId))
+            assertThatThrownBy(() -> targetManagement.getByControllerId(hiddenTargetControllerId))
                     .as("Missing read permissions for hidden target.")
                     .isInstanceOf(InsufficientPermissionException.class);
 
-            // verify targetManagement#getByControllerID
+            // verify targetManagement#getByControllerId
             assertThat(targetManagement
-                    .getByControllerID(Arrays.asList(permittedTarget.getControllerId(), hiddenTargetControllerId))
+                    .getByControllerId(List.of(permittedTarget.getControllerId(), hiddenTargetControllerId))
                     .stream().map(Identifiable::getId).toList()).containsOnly(permittedTarget.getId());
 
             // verify targetManagement#get
@@ -94,8 +97,8 @@ class TargetAccessControllerTest extends AbstractJpaIntegrationTest {
             assertThat(targetManagement.get(hiddenTarget.getId())).isEmpty();
 
             // verify targetManagement#get
-            assertThat(targetManagement.get(Arrays.asList(permittedTarget.getId(), hiddenTarget.getId())).stream()
-                    .map(Identifiable::getId).toList()).containsOnly(permittedTarget.getId());
+            final List<Long> withHidden = List.of(permittedTarget.getId(), hiddenTarget.getId());
+            assertThatExceptionOfType(EntityNotFoundException.class).isThrownBy(() -> targetManagement.get(withHidden));
 
             // verify targetManagement#getControllerAttributes
             assertThat(targetManagement.getControllerAttributes(permittedTarget.getControllerId())).isEmpty();
@@ -121,14 +124,14 @@ class TargetAccessControllerTest extends AbstractJpaIntegrationTest {
     @Test
     void verifyTagFilteringAndManagement() {
         final Target permittedTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device01").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device01").updateStatus(TargetUpdateStatus.REGISTERED).build());
 
         final Target readOnlyTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device02").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device02").updateStatus(TargetUpdateStatus.REGISTERED).build());
         final String readOnlyTargetControllerId = readOnlyTarget.getControllerId();
 
         final Target hiddenTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device03").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device03").updateStatus(TargetUpdateStatus.REGISTERED).build());
 
         final Long myTagId = targetTagManagement.create(TargetTagManagement.Create.builder().name("myTag").build()).getId();
 
@@ -200,9 +203,9 @@ class TargetAccessControllerTest extends AbstractJpaIntegrationTest {
         distributionSetManagement.lock(ds);
 
         final Target permittedTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device01").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device01").updateStatus(TargetUpdateStatus.REGISTERED).build());
         final String hiddenTargetControllerId = targetManagement
-                .create(entityFactory.target().create().controllerId("device02").status(TargetUpdateStatus.REGISTERED))
+                .create(Create.builder().controllerId("device02").updateStatus(TargetUpdateStatus.REGISTERED).build())
                 .getControllerId();
 
         runAs(withUser("user", READ_TARGET + "/controllerId==" + permittedTarget.getControllerId()), () ->
@@ -240,9 +243,9 @@ class TargetAccessControllerTest extends AbstractJpaIntegrationTest {
         distributionSetManagement.lock(secondDs);
 
         final Target manageableTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device01").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device01").updateStatus(TargetUpdateStatus.REGISTERED).build());
         final Target readOnlyTarget = targetManagement
-                .create(entityFactory.target().create().controllerId("device02").status(TargetUpdateStatus.REGISTERED));
+                .create(Create.builder().controllerId("device02").updateStatus(TargetUpdateStatus.REGISTERED).build());
 
         runAs(withUser("user",
                 READ_TARGET + "/controllerId==" + manageableTarget.getControllerId() + " or controllerId==" + readOnlyTarget.getControllerId(),
